# android-qemu

./: .adbShellCmd  .gitignore  CMakeLists.txt  debug.py  debug.sh  gdbw  main.c
qemu-2.8.0/: CMakeLists.txt  Makefile  Makefile.target  configure  cpu-exec.c
qemu-2.8.0/android/: android.h  apicall.c  config.h  debug.c  debug.h  debugConfig.h  linker.c  loader.h  logMonitor  logMonitor.c  peload.c  start.c  start.h  winapi.h  winnt.h
qemu-2.8.0/include/exec/: exec-all.h
qemu-2.8.0/linux-user/: elfload.c  linuxload.c  main.c  qemu.h  syscall.c
qemu-2.8.0/roms/seabios/: .version  config.mak
qemu-2.8.0/roms/vgabios/: config.mak
